# flashmapfs

./: .build.yml  .gitignore  Kconfig  Makefile  README.md  arena.c  boolean_flag_file.c  fs.c  gbb.c  main.c  meson.build  mmap_file.c  raw_file.c  route.c  str_file.c  version_file.c
.github/workflows/: ci.yml
include/: arena.h  boolean_flag_file.h  fs.h  gbb.h  log.h  mmap_file.h  raw_file.h  route.h  str_file.h  version_file.h
tests/: conftest.py  test_e2e.py  test_main.py
tests/data/: bios-elm.ro-8438-140-0.rw-8438-184-0.bin.xz  ec-elm.ro-1-1-4818.rw-1-1-4824.bin.xz
